# ParticleEffectDesigner

./: CMakeLists.txt  LICENSE
assets/shaders/: particle.frag  particle.vert
src/: gl.cpp  main.cpp  particleEditorState.cpp  particleEditorState.hpp  particleRenderer.cpp  particleRenderer.hpp
src/fileDialog/: tinyfiledialogs.cpp
src/imgui/: imconfig.h
